The create and delete routes are done

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
             <p> <span class="label">  ID: </span>{{this.id}} </p>
             <p> <span class="label">  Quote: </span>{{this.quote}} </p>
             <p> <span class="label">  Author: </span>{{this.author}} </p>
-            <button class="delquo" data-delid="{{this.id}}">Delete</button>
+            <button class="delquote" data-id="{{this.id}}">Delete</button>
             <a href="/{{this.id}}">Update this quote</a>
         </li>
     {{/each}}
